# settings for setup.py
[metadata]
author = Major Hayden
author_email = major@???
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
description = icanhaz container
keywords =
    webutil
    icanhazip
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = 'text/x-rst; charset=UTF-8'
python_requires = >=3.6
url = http://icanhazip.com

[options]
install_requires =
    Click==7.0
    Flask==1.0.2
    gunicorn==19.9.0
    itsdangerous==0.24
    Jinja2==2.10
    MarkupSafe==1.0
    Werkzeug==0.14.1
tests_require =
    mock
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    icanhaz = icanhaz.__main__:main

[options.package_data]
icanhaz =
    data/*

[options.packages.find]
include =
    icanhaz
    icanhaz.*


# settings for flake8
[flake8]
doctests = True
exclude =
    .eggs
    .git
    docs
    lib
    bin
    include
    build
    dist
ignore = D203
max-line-length = 120
max-complexity = 10


# settings for coverage.py
[coverage:run]
branch = True
source = icanhaz
omit =
    # Ignore test coverage of tests.
    icanhaz/tests/*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report


# settings for tox
[tox]
envlist = py36
platform = linux2|darwin

[testenv]
install_command = pip install --process-dependency-links {opts} {packages}
commands = {envpython} setup.py test
deps =
passenv =
    TERM
    TERMINFO